// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Controls/SelectRect Basic smoke-test 1`] = `
<div style="width: 100%; height: 512px; position: relative;">
</div>
`;

exports[`Controls/SelectRect Static smoke-test 1`] = `
<div style="width: 100%; height: 512px; position: relative;">
  <div style="height: 250px; left: 100px; top: 150px; width: 200px; background: var(--cmpui-primary-color); opacity: 0.3; pointer-events: none; position: absolute; z-index: 1000;">
  </div>
</div>
`;
